infrastructure/controllers/tinyauth/app/tinyauth-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinyauth
  annotations:
    traefik.enable: "true"
    traefik.http.routers.tinyauth.rule: Host(`tinyauth.alpha.markmk.com`)
    traefik.http.middlewares.tinyauth.forwardauth.address: http://tinyauth.tinyauth.svc.cluster.local:3000/api/auth/traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tinyauth.alpha.markmk.com`) 
      kind: Rule
      services:
        - name: tinyauth
          port: 3000
          namespace: tinyauth
